--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="hidden md:flex text-xl flex-col md:flex-row md:items-center md:justify-end md:space-x-4"
                     id="nav-links">
                     <a href="#home-section" class="nav-link">Home<span class="active-underline"></span></a>
-                    <a href="#resume-section" class="nav-link">Resume<span class="active-underline"></span></a>
+                    <a href="#resume-section" class="nav-link"> <span class="active-underline"></span></a>
                     <a href="#about-section" class="nav-link">About<span class="active-underline"></span></a>
                     <a href="#mywork-section" class="nav-link">Work<span class="active-underline"></span></a>
                     <a href="#contact-section" class="nav-link">Contact<span class="active-underline"></span></a>
@@ -220,10 +220,13 @@
                     <h2 class="mainwrd text-3xl font-bold mb-2">$ dir /a</h2>
                     <h2 class="mainwrd text-3xl font-bold mb-2 mt-3">Web Developer</h2>
                     <p class="text-lg text-neutral-400">
-                        I am a dedicated web developer with a passion for creating dynamic and user-centric web
-                        applications. My expertise includes HTML, CSS, and JavaScript, and I’m adept at using modern
-                        frameworks and tools to build responsive and engaging websites. I thrive on solving complex
-                        problems and continuously seek to enhance my skills through practical experience and learning.
+                        I am a cybersecurity specialist with a strong foundation in web development. I excel at creating
+                        robust, secure, and user-centric applications. My expertise lies in developing advanced
+                        cybersecurity tools and projects that address real-world challenges. While I have a solid
+                        background in using modern web technologies and frameworks to build responsive and engaging
+                        websites, my primary focus is on integrating security into every aspect of development. I am
+                        committed to solving complex problems and continuously advancing my skills through hands-on
+                        experience and learning.
                     </p>
                 </div>
                 <div>
@@ -325,13 +328,14 @@
                     <ul class="glide__slides">
                         <li class="glide__slide">
                             <div class="max-w-sm mx-auto overflow-hidden rounded-lg shadow-lg">
-                                <a href="https://barcodebyjoker.000webhostapp.com/" target="_blank">
+                                <a href="https://barcodegeneratorkhp.netlify.app/" target="_blank">
                                     <img class="w-full h-48 object-cover rounded-lg" src="/img/barcode.png"
                                         alt="Barcode Generator">
                                     <div class="px-6 py-4 project-card">
                                         <h3 class="font-bold text-xl text-zinc-600 mb-2">Barcode Generator</h3>
-                                        <p class="text-gray-400 text-base">A PHP-based barcode generator that allows
-                                            users to create and download barcodes for various applications.</p>
+                                        <p class="text-gray-400 text-base"> A barcode generator built with React.js and
+                                            Tailwind CSS, allowing users to create More than 1000+ barcodes for various
+                                            applications.</p>
                                     </div>
                                 </a>
                             </div>
